K1J-1594: Handle unauthorised private practitioner and enable registration in Webcert (#1250)